GPL/P6/tests/t030.gpl
rectangle r1["hello"];
rectangle r2[2.2];
rectangle r3[40 - 42];
rectangle r4[0];
